# qa-automation

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
src/pages/: base_page.py  cart_page.py  checkout_complete_page.py  checkout_step_one_page.py  checkout_step_two_page.py  inventory_page.py  item_details_page.py  login_page.py
src/tests/: test_cart.py  test_checkout.py  test_inventory.py  test_item_details.py  test_login.py  test_sidebar.py
