[project]
name = "qa-automation"
version = "0.1.0"
description = "SauceDemo Playwright test automation with pytest"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "allure-pytest>=2.15.3",
    "pytest-playwright>=0.7.2",
]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "SIM", "ARG", "BLE", "RET", "SLF", "PTH", "PLC", "PLE", "RUF", "PT"]
ignore = ["PLC2701"]

[tool.ruff.lint.per-file-ignores]
"src/tests/*.py" = ["ARG001", "ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
markers = [
    "smoke: quick smoke tests for critical paths",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
